@@ -6,6 +6,10 @@ Version 2.8.0
     meaningless values, and using them in WHERE conditions would lead to
     meaningless results.
     Reported in https://stackoverflow.com/q/78823195/6464308
+  - Fix the server option "nchar" introduced in 2.4.0.
+    Due to an omission, that option never worked, and NCHAR and NVARCHAR2
+    columns were converted wrongly even if "nchar" was "on".
+    Report and analysis by Andrey Teplitskiy.
 
   Enhancements:
   - Raise the limit for "prefetch" to 10240 again, like it was before
